--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
           platforms: linux/${{ matrix.arch }}
           push: true
           tags: |
-            jesec/rtorrent:latest-${{ matrix.arch }}
+            sabersalv/rtorrent:latest-${{ matrix.arch }}
 
       - name: Extract built rTorrent artifacts from Docker image
         run: |
@@ -99,14 +99,14 @@ jobs:
 
       - name: Merge multi-arch Docker image manifests
         run: |
-          docker buildx imagetools create -t jesec/rtorrent:latest jesec/rtorrent:latest-arm64 jesec/rtorrent:latest-amd64
-          docker buildx imagetools create -t jesec/rtorrent:${{ steps.get_version.outputs.VERSION }} jesec/rtorrent:latest-arm64 jesec/rtorrent:latest-amd64
+          docker buildx imagetools create -t sabersalv/rtorrent:latest sabersalv/rtorrent:latest-arm64 sabersalv/rtorrent:latest-amd64
+          docker buildx imagetools create -t sabersalv/rtorrent:${{ steps.get_version.outputs.VERSION }} sabersalv/rtorrent:latest-arm64 sabersalv/rtorrent:latest-amd64
 
       - name: Remove intermediate tags
         run: |
-          token=`curl -s -H "Content-Type: application/json" -X POST -d '{"username": "jesec","password":"${{ secrets.DOCKERHUB_PASSWORD }}"}' "https://hub.docker.com/v2/users/login/" | jq -r '.token'`
-          curl "https://hub.docker.com/v2/repositories/jesec/rtorrent/tags/latest-arm64/" -X DELETE -H "Authorization: JWT ${token}"
-          curl "https://hub.docker.com/v2/repositories/jesec/rtorrent/tags/latest-amd64/" -X DELETE -H "Authorization: JWT ${token}"
+          token=`curl -s -H "Content-Type: application/json" -X POST -d '{"username": "${{ secrets.DOCKERHUB_USERNAME }}","password":"${{ secrets.DOCKERHUB_PASSWORD }}"}' "https://hub.docker.com/v2/users/login/" | jq -r '.token'`
+          curl "https://hub.docker.com/v2/repositories/sabersalv/rtorrent/tags/latest-arm64/" -X DELETE -H "Authorization: JWT ${token}"
+          curl "https://hub.docker.com/v2/repositories/sabersalv/rtorrent/tags/latest-amd64/" -X DELETE -H "Authorization: JWT ${token}"
 
   create-release:
     needs: docker
